# potok

./: .gitignore  CPPP.md  CPPP.py  README.md  client.py  crypto.py  notes  notes   pyproject.toml  reciever.py  secure_reciever.py  secure_sender.py  sender.py  server.py  server_1.py  server_2.py
.old/: CPPP.py  crypto.py  keygen.py
.old/base/: reciever.py
.old/secured/: reciever.py  server.py
base/: sender.py  server.py
parser/: message_parser.py
py-potok/: requirements.txt
py-potok/scripts/: build.sh  init.sh
py-potok/src/pypotok/: __init__.py  message.py  parser.py  segments.py
py-potok/tests/: test_bf_server.py  test_client.py  test_message.py  test_server.py
rewrite/: main.py  reciever.py  transmitter.py
scripts/: init.sh
secured/: reciever.py  sender.py  server.py  server_send.py
src/: CPPP.py
src/CPPP_Cieciak.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/crypto/: ggh.py
src/parser/: message_parser.py
test/: CPPP.py  sender.py  server.py
tests/: calc_server.py  client.py  dev_broadcast.py  dev_client.py  dev_server.py  hello_world_server.py
